# ft-shop

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.forgejo/workflows/: build.yaml
app/: main.py
app/lib/: cron.py  db.py  dependency.py  env.py  logger.py  models.py  utils.py
app/routes/: __init__.py  subscription.py  user.py
lib/: cron.py  db.py  dependency.py  env.py  models.py
routes/: subscription.py  user.py
tests/: conftest.py  helpers.py  test_publish.py  test_user.py  test_webhook.py
